--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dkrwq4wvi/image/upload/v1770649002/IMG-20260209-WA0027_mb3w3m.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alpha Gym</title>
   </head>
